Added custom css/js, comments and folder structure

--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+    <!--Required meta tags-->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>ToDo List</title>
+    <!--Custom CSS file-->
+    <link rel="stylesheet" type="text/css" href="assets/css/todos.css" />
+    <!--jQuery file-->
+    <script
+      type="text/javascript"
+      src="assets/js/lib/jquery-3.3.1.min.js"
+    ></script>
   </head>
   <body>
-
-
-    
+    <!--Custom Javascript file-->
+    <script type="text/javascript" src="assets/js/todos.js"></script>
   </body>
 </html>
