--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
     ></script>
   </head>
   <body>
+
+
+<div id="container">
+  <h1>ToDo List</h1>
+  <input type="text">
+  <ul>
+    <li> <span>X</span> Test do</li>
+    <li><span>X</span> Test go to</li>
+    <li><span>X</span> Wypity yey mfkr</li>
+  </ul>
+</div>
+
+
     <!--Custom Javascript file-->
     <script type="text/javascript" src="assets/js/todos.js"></script>
   </body>
