Added functionality to add new items to to do list

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div id="container">
   <h1>ToDo List</h1>
-  <input type="text">
+  <input type="text" placeholder="Insert task">
   <ul>
     <li> <span>X</span> Test do</li>
     <li><span>X</span> Test go to</li>
