--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>ToDo List</title>
+    <title>To-Do List</title>
     <!--Custom CSS file-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css" />
     <!--jQuery file-->
     <script
@@ -17,18 +18,15 @@
     ></script>
   </head>
   <body>
-
-
-<div id="container">
-  <h1>ToDo List</h1>
-  <input type="text" placeholder="Insert task">
-  <ul>
-    <li> <span>X</span> Test do</li>
-    <li><span>X</span> Test go to</li>
-    <li><span>X</span> Wypity yey mfkr</li>
-  </ul>
-</div>
-
+    <div id="container">
+      <h1>To-Do List</h1>
+      <input type="text" />
+      <ul>
+        <li><span>X</span> Test do</li>
+        <li><span>X</span> Test go to</li>
+        <li><span>X</span> Wypity yey mfkr</li>
+      </ul>
+    </div>
 
     <!--Custom Javascript file-->
     <script type="text/javascript" src="assets/js/todos.js"></script>
