changed colour scheme and added gradient

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     />
     <title>To-Do List</title>
     <!--Custom CSS file-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet"> 
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css" />
     <!--jQuery file-->
     <script
