--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css" />
+    <!--fontawesome-->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <!--jQuery file-->
     <script
       type="text/javascript"
@@ -22,13 +29,9 @@
   </head>
   <body>
     <div id="container">
-      <h1>To-Do List</h1>
-      <input type="text" />
-      <ul>
-        <li><span>X</span> Test do</li>
-        <li><span>X</span> Test go to</li>
-        <li><span>X</span> Wypity yey mfkr</li>
-      </ul>
+      <h1>To-Do List <i class="far fa-eye-slash"></i></h1>
+      <input type="text" placeholder="Add to list" />
+      <ul></ul>
     </div>
 
     <!--Custom Javascript file-->
